// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`archive_reducer UPDATE_ARCHIVE 1`] = `
Object {
  "fileActions": Object {
    "download": Object {
      "allow": false,
      "progressing": Object {},
    },
    "save": Object {
      "allow": false,
      "folderUrl": "",
      "name": "",
      "progressing": Object {},
      "state": "",
    },
  },
  "listing": Object {},
  "nestedCount": 0,
  "path": "",
  "selectedFile": Object {
    "encrypted": false,
    "name": "",
    "path": "",
    "viewable": false,
  },
  "state": "",
}
`;

exports[`archive_reducer UPDATE_ARCHIVE 2`] = `
Object {
  "fileActions": Object {
    "download": Object {
      "allow": false,
      "progressing": Object {},
    },
    "save": Object {
      "allow": false,
      "folderUrl": "",
      "name": "",
      "progressing": Object {},
      "state": "",
    },
  },
  "listing": Object {
    "file": Array [
      Object {
        "name": "root_file_1.ext",
        "path": "root_file_1.ext",
        "viewable": true,
      },
      Object {
        "encrypted": true,
        "name": "root_file_2.ext",
        "path": "root_file_2.ext",
        "viewable": false,
      },
    ],
    "folder": Array [
      Object {
        "file": Array [
          Object {
            "name": "file-in-folder.txt",
            "path": "root_folder_1/file-in-folder.txt",
            "viewable": true,
          },
        ],
        "folder": Array [
          Object {
            "file": Array [
              Object {
                "name": "file-in-folder-in-folder.ppc",
                "path": "root_folder_1/folder-in-folder/file-in-folder-in-folder.ppc",
                "unknownProp": "unknownValue",
              },
            ],
            "name": "folder-in-folder",
            "path": "root_folder_1/folder-in-folder",
          },
        ],
        "name": "root_folder_1",
        "path": "root_folder_1",
      },
    ],
  },
  "nestedCount": 999,
  "path": "",
  "selectedFile": Object {
    "encrypted": false,
    "name": "",
    "path": "",
    "viewable": false,
  },
  "state": "READY",
}
`;

exports[`archive_reducer updateArchiveAction 1`] = `
Object {
  "download": Object {
    "allow": false,
    "progressing": Object {},
  },
  "save": Object {
    "allow": false,
    "folderUrl": "",
    "name": "",
    "progressing": Object {},
    "state": "",
  },
}
`;

exports[`archive_reducer updateArchiveAction 2`] = `
Object {
  "download": Object {
    "allow": true,
    "progressing": Object {},
  },
  "save": Object {
    "allow": false,
    "folderUrl": "",
    "name": "",
    "progressing": Object {},
    "state": "",
  },
}
`;

exports[`archive_reducer updateArchiveAction 3`] = `
Object {
  "download": Object {
    "allow": true,
    "progressing": Object {},
  },
  "save": Object {
    "allow": true,
    "folderUrl": "/path/to/downloads",
    "name": "saved-file-name.extension",
    "progressing": Object {},
    "state": "READY",
  },
}
`;

exports[`archive_reducer updateArchiveSelectedFile 1`] = `
Object {
  "encrypted": false,
  "name": "",
  "path": "",
  "viewable": false,
}
`;

exports[`archive_reducer updateArchiveSelectedFile 2`] = `
Object {
  "encrypted": true,
  "name": "selected-file-name.ext",
  "path": "path-to-selected/selected-file-name.ext",
  "viewable": true,
}
`;
